--- a/cruds_adminlte/templates/cruds/base.html
+++ b/cruds_adminlte/templates/cruds/base.html
@@ -24,7 +24,7 @@
         {% include 'adminlte/lib/_scripts.html' %}
         <script type="text/javascript" src="{% static 'jquery-cookie/jquery.cookie.js' %}"></script>
 <script type="text/javascript" src="{% static 'django_ajax/js/jquery.ajax.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'django_ajax/js/jquery.ajax-plugin.js' %}"></script>
+<script type="text/javascript" src="{% static 'django_ajax/js/jquery.ajax-plugin.min.js' %}"></script>
 
     {% endblock %}
     {% block js %}{% endblock js %}
