Added update_json.html and _form_json.html

--- a/cruds_adminlte/templates/cruds/_form_json.html
+++ b/cruds_adminlte/templates/cruds/_form_json.html
@@ -1,1 +1,1 @@
-{% load i18n %}{% load crispy_forms_tags %}{% if form.helper %}{% crispy_json form %}{% else %}{{ form|crispy_json }}{% endif %}
+{% load i18n %}{% load crispy_forms_tags %}{% crispy_json form %}
