--- a/cruds_adminlte/templates/cruds/update_json.html
+++ b/cruds_adminlte/templates/cruds/update_json.html
@@ -1,1 +1,1 @@
-{% load i18n %}{% include "cruds/_form_json.html" with action='update' %}
+{% load i18n %}{% load crud_tags %}{% include "cruds/_form_json.html" with action='update' %}
